--- a/Code/SuperCapCodeG4/SuperCapCodeG4.ioc
+++ b/Code/SuperCapCodeG4/SuperCapCodeG4.ioc
@@ -39,10 +39,11 @@ ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
 ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV10
 ADC3.CommonPathInternal=null|null|null|null
 ADC3.ContinuousConvMode=ENABLE
 ADC3.DMAContinuousRequests=ENABLE
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,DMAContinuousRequests,CommonPathInternal
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,DMAContinuousRequests,ClockPrescaler,CommonPathInternal
 ADC3.NbrOfConversion=3
 ADC3.NbrOfConversionFlag=1
 ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -55,16 +56,25 @@ ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC3.master=1
-ADC4.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC4.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC4.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC4.ClockPrescaler=ADC_CLOCK_ASYNC_DIV10
 ADC4.CommonPathInternal=null|null|null|null
-ADC4.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC4.ContinuousConvMode=ENABLE
+ADC4.DMAContinuousRequests=ENABLE
+ADC4.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,DMAContinuousRequests,CommonPathInternal
+ADC4.NbrOfConversion=2
 ADC4.NbrOfConversionFlag=1
 ADC4.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC4.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC4.Rank-0\#ChannelRegularConversion=1
-ADC4.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC4.Rank-1\#ChannelRegularConversion=2
+ADC4.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
+ADC4.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
 ADC5.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC5.ClockPrescaler=ADC_CLOCK_ASYNC_DIV10
 ADC5.CommonPathInternal=null|null|null|null
-ADC5.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC5.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,CommonPathInternal
 ADC5.NbrOfConversionFlag=1
 ADC5.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC5.Rank-1\#ChannelRegularConversion=1
@@ -123,10 +133,28 @@ Dma.ADC3.2.SyncEnable=DISABLE
 Dma.ADC3.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.ADC3.2.SyncRequestNumber=1
 Dma.ADC3.2.SyncSignalID=NONE
+Dma.ADC4.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC4.3.EventEnable=DISABLE
+Dma.ADC4.3.Instance=DMA1_Channel3
+Dma.ADC4.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC4.3.MemInc=DMA_MINC_ENABLE
+Dma.ADC4.3.Mode=DMA_CIRCULAR
+Dma.ADC4.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC4.3.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC4.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC4.3.Priority=DMA_PRIORITY_LOW
+Dma.ADC4.3.RequestNumber=1
+Dma.ADC4.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC4.3.SignalID=NONE
+Dma.ADC4.3.SyncEnable=DISABLE
+Dma.ADC4.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC4.3.SyncRequestNumber=1
+Dma.ADC4.3.SyncSignalID=NONE
 Dma.Request0=ADC2
 Dma.Request1=ADC1
 Dma.Request2=ADC3
-Dma.RequestsNb=3
+Dma.Request3=ADC4
+Dma.RequestsNb=4
 FDCAN1.CalculateBaudRateNominal=1000000
 FDCAN1.CalculateTimeBitNominal=1000
 FDCAN1.CalculateTimeQuantumNominal=100.0
@@ -202,7 +230,6 @@ Mcu.UserName=STM32G473VETx
 MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA2_Channel1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -395,11 +422,11 @@ SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation4\ CH4\ CH4N=TIM_CHANNEL_4
-TIM1.DeadTime=2
+TIM1.DeadTime=20
 TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation4 CH4 CH4N,PeriodNoDither,DeadTime,PulseNoDither_1,PulseNoDither_4
 TIM1.PeriodNoDither=300
-TIM1.PulseNoDither_1=100
-TIM1.PulseNoDither_4=80
+TIM1.PulseNoDither_1=0
+TIM1.PulseNoDither_4=300
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
