--- a/Code/SuperCapCodeG4/SuperCapCodeG4.ioc
+++ b/Code/SuperCapCodeG4/SuperCapCodeG4.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV10
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC1.CommonPathInternal=null|null|null|null
 ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
@@ -14,13 +14,13 @@ ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OversamplingMode=DISABLE
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.Rank-2\#ChannelRegularConversion=2
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_13
 ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV10
+ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC2.CommonPathInternal=null|null|null|null
 ADC2.ContinuousConvMode=ENABLE
 ADC2.DMAContinuousRequests=ENABLE
@@ -33,13 +33,13 @@ ADC2.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.Rank-1\#ChannelRegularConversion=2
 ADC2.Rank-2\#ChannelRegularConversion=3
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
+ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
 ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV10
+ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC3.CommonPathInternal=null|null|null|null
 ADC3.ContinuousConvMode=ENABLE
 ADC3.DMAContinuousRequests=ENABLE
@@ -52,13 +52,13 @@ ADC3.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC3.Rank-0\#ChannelRegularConversion=1
 ADC3.Rank-1\#ChannelRegularConversion=2
 ADC3.Rank-2\#ChannelRegularConversion=3
-ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
+ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
+ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
 ADC3.master=1
 ADC4.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC4.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC4.ClockPrescaler=ADC_CLOCK_ASYNC_DIV10
+ADC4.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC4.CommonPathInternal=null|null|null|null
 ADC4.ContinuousConvMode=ENABLE
 ADC4.DMAContinuousRequests=ENABLE
@@ -69,16 +69,16 @@ ADC4.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC4.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC4.Rank-0\#ChannelRegularConversion=1
 ADC4.Rank-1\#ChannelRegularConversion=2
-ADC4.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
-ADC4.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
+ADC4.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
+ADC4.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
 ADC5.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC5.ClockPrescaler=ADC_CLOCK_ASYNC_DIV10
+ADC5.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC5.CommonPathInternal=null|null|null|null
 ADC5.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,CommonPathInternal
 ADC5.NbrOfConversionFlag=1
 ADC5.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC5.Rank-1\#ChannelRegularConversion=1
-ADC5.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC5.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -171,11 +171,12 @@ Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
 Mcu.IP10=TIM1
-Mcu.IP11=TIM3
-Mcu.IP12=TIM4
-Mcu.IP13=USART1
-Mcu.IP14=USART2
-Mcu.IP15=USART3
+Mcu.IP11=TIM2
+Mcu.IP12=TIM3
+Mcu.IP13=TIM4
+Mcu.IP14=USART1
+Mcu.IP15=USART2
+Mcu.IP16=USART3
 Mcu.IP2=ADC3
 Mcu.IP3=ADC4
 Mcu.IP4=ADC5
@@ -184,7 +185,7 @@ Mcu.IP6=FDCAN1
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SYS
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32G473V(B-C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -217,13 +218,14 @@ Mcu.Pin32=PD5
 Mcu.Pin33=PD6
 Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin35=VP_SYS_VS_DBSignals
+Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PF0-OSC_IN
 Mcu.Pin5=PF1-OSC_OUT
 Mcu.Pin6=PC0
 Mcu.Pin7=PA0
 Mcu.Pin8=PA1
 Mcu.Pin9=PA5
-Mcu.PinsNb=36
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G473VETx
@@ -239,6 +241,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
@@ -427,6 +430,11 @@ TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation4 CH4 C
 TIM1.PeriodNoDither=300
 TIM1.PulseNoDither_1=0
 TIM1.PulseNoDither_4=300
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Dithering=Disable
+TIM2.IPParameters=Prescaler,PeriodNoDither,AutoReloadPreload,Dithering
+TIM2.PeriodNoDither=3300
+TIM2.Prescaler=0
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
@@ -448,11 +456,13 @@ USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.BaudRate=921600
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-USART3.BaudRate=921600
+USART3.BaudRate=1152000
 USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
