--- a/Code/SuperCapCodeG4/SuperCapCodeG4.ioc
+++ b/Code/SuperCapCodeG4/SuperCapCodeG4.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV8
 ADC1.CommonPathInternal=null|null|null|null
 ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
@@ -20,7 +20,7 @@ ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_13
 ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
+ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV8
 ADC2.CommonPathInternal=null|null|null|null
 ADC2.ContinuousConvMode=ENABLE
 ADC2.DMAContinuousRequests=ENABLE
@@ -39,7 +39,7 @@ ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
 ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
+ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV8
 ADC3.CommonPathInternal=null|null|null|null
 ADC3.ContinuousConvMode=ENABLE
 ADC3.DMAContinuousRequests=ENABLE
@@ -58,7 +58,7 @@ ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
 ADC3.master=1
 ADC4.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC4.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC4.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
+ADC4.ClockPrescaler=ADC_CLOCK_ASYNC_DIV8
 ADC4.CommonPathInternal=null|null|null|null
 ADC4.ContinuousConvMode=ENABLE
 ADC4.DMAContinuousRequests=ENABLE
@@ -72,7 +72,7 @@ ADC4.Rank-1\#ChannelRegularConversion=2
 ADC4.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
 ADC4.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
 ADC5.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC5.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
+ADC5.ClockPrescaler=ADC_CLOCK_ASYNC_DIV8
 ADC5.CommonPathInternal=null|null|null|null
 ADC5.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,CommonPathInternal
 ADC5.NbrOfConversionFlag=1
@@ -174,9 +174,10 @@ Mcu.IP10=TIM1
 Mcu.IP11=TIM2
 Mcu.IP12=TIM3
 Mcu.IP13=TIM4
-Mcu.IP14=USART1
-Mcu.IP15=USART2
-Mcu.IP16=USART3
+Mcu.IP14=TIM5
+Mcu.IP15=USART1
+Mcu.IP16=USART2
+Mcu.IP17=USART3
 Mcu.IP2=ADC3
 Mcu.IP3=ADC4
 Mcu.IP4=ADC5
@@ -185,7 +186,7 @@ Mcu.IP6=FDCAN1
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SYS
-Mcu.IPNb=17
+Mcu.IPNb=18
 Mcu.Name=STM32G473V(B-C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -219,13 +220,14 @@ Mcu.Pin33=PD6
 Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin35=VP_SYS_VS_DBSignals
 Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin4=PF0-OSC_IN
 Mcu.Pin5=PF1-OSC_OUT
 Mcu.Pin6=PC0
 Mcu.Pin7=PA0
 Mcu.Pin8=PA1
 Mcu.Pin9=PA5
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G473VETx
@@ -242,6 +244,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
@@ -270,7 +273,7 @@ PB12.Signal=ADC4_IN3
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB15.Locked=true
-PB15.Signal=GPIO_Input
+PB15.Signal=GPIO_Output
 PB2.Locked=true
 PB2.Mode=IN12-Single-Ended
 PB2.Signal=ADC2_IN12
@@ -359,7 +362,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_ADC4_Init-ADC4-false-HAL-true,13-MX_FDCAN1_Init-FDCAN1-false-HAL-true,14-MX_ADC5_Init-ADC5-false-HAL-true,15-MX_ADC3_Init-ADC3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_ADC4_Init-ADC4-false-HAL-true,13-MX_FDCAN1_Init-FDCAN1-false-HAL-true,14-MX_ADC5_Init-ADC5-false-HAL-true,15-MX_ADC3_Init-ADC3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.ADC12Freq_Value=150000000
 RCC.ADC345Freq_Value=150000000
 RCC.AHBFreq_Value=150000000
@@ -425,7 +428,7 @@ SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation4\ CH4\ CH4N=TIM_CHANNEL_4
-TIM1.DeadTime=20
+TIM1.DeadTime=19
 TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation4 CH4 CH4N,PeriodNoDither,DeadTime,PulseNoDither_1,PulseNoDither_4
 TIM1.PeriodNoDither=300
 TIM1.PulseNoDither_1=0
@@ -433,7 +436,7 @@ TIM1.PulseNoDither_4=300
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Dithering=Disable
 TIM2.IPParameters=Prescaler,PeriodNoDither,AutoReloadPreload,Dithering
-TIM2.PeriodNoDither=3300
+TIM2.PeriodNoDither=500
 TIM2.Prescaler=0
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -450,6 +453,9 @@ TIM4.PeriodNoDither=48000
 TIM4.Prescaler=10
 TIM4.PulseNoDither_1=90
 TIM4.PulseNoDither_2=90
+TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM5.IPParameters=PeriodNoDither,AutoReloadPreload
+TIM5.PeriodNoDither=1000
 USART1.BaudRate=921600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
@@ -465,4 +471,6 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
