--- a/Code/SuperCapCodeG4/SuperCapCodeG4.ioc
+++ b/Code/SuperCapCodeG4/SuperCapCodeG4.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV8
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC1.CommonPathInternal=null|null|null|null
 ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
@@ -14,13 +14,13 @@ ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OversamplingMode=DISABLE
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.Rank-2\#ChannelRegularConversion=2
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_13
 ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV8
+ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC2.CommonPathInternal=null|null|null|null
 ADC2.ContinuousConvMode=ENABLE
 ADC2.DMAContinuousRequests=ENABLE
@@ -33,13 +33,13 @@ ADC2.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.Rank-1\#ChannelRegularConversion=2
 ADC2.Rank-2\#ChannelRegularConversion=3
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
-ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
-ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
+ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
 ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV8
+ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC3.CommonPathInternal=null|null|null|null
 ADC3.ContinuousConvMode=ENABLE
 ADC3.DMAContinuousRequests=ENABLE
@@ -58,7 +58,7 @@ ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_6CYCLES_5
 ADC3.master=1
 ADC4.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC4.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC4.ClockPrescaler=ADC_CLOCK_ASYNC_DIV8
+ADC4.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC4.CommonPathInternal=null|null|null|null
 ADC4.ContinuousConvMode=ENABLE
 ADC4.DMAContinuousRequests=ENABLE
@@ -72,7 +72,7 @@ ADC4.Rank-1\#ChannelRegularConversion=2
 ADC4.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
 ADC4.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
 ADC5.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC5.ClockPrescaler=ADC_CLOCK_ASYNC_DIV8
+ADC5.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC5.CommonPathInternal=null|null|null|null
 ADC5.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,CommonPathInternal
 ADC5.NbrOfConversionFlag=1
@@ -429,7 +429,8 @@ SH.S_TIM4_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation4\ CH4\ CH4N=TIM_CHANNEL_4
 TIM1.DeadTime=19
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation4 CH4 CH4N,PeriodNoDither,DeadTime,PulseNoDither_1,PulseNoDither_4
+TIM1.Dithering=Disable
+TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation4 CH4 CH4N,PeriodNoDither,DeadTime,PulseNoDither_1,PulseNoDither_4,Dithering
 TIM1.PeriodNoDither=300
 TIM1.PulseNoDither_1=0
 TIM1.PulseNoDither_4=300
@@ -455,7 +456,7 @@ TIM4.PulseNoDither_1=90
 TIM4.PulseNoDither_2=90
 TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM5.IPParameters=PeriodNoDither,AutoReloadPreload
-TIM5.PeriodNoDither=1000
+TIM5.PeriodNoDither=1500
 USART1.BaudRate=921600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
