--- a/Code/SuperCapCodeG4Bi/SuperCapCodeG4.ioc
+++ b/Code/SuperCapCodeG4Bi/SuperCapCodeG4.ioc
@@ -428,9 +428,10 @@ SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation4\ CH4\ CH4N=TIM_CHANNEL_4
-TIM1.DeadTime=19
+TIM1.DeadTime=20
 TIM1.Dithering=Disable
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation4 CH4 CH4N,PeriodNoDither,DeadTime,PulseNoDither_1,PulseNoDither_4,Dithering
+TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation4 CH4 CH4N,PeriodNoDither,DeadTime,PulseNoDither_1,PulseNoDither_4,Dithering,OCIdleState_4
+TIM1.OCIdleState_4=TIM_OCIDLESTATE_RESET
 TIM1.PeriodNoDither=300
 TIM1.PulseNoDither_1=0
 TIM1.PulseNoDither_4=300
@@ -457,13 +458,13 @@ TIM4.PulseNoDither_2=90
 TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM5.IPParameters=PeriodNoDither,AutoReloadPreload
 TIM5.PeriodNoDither=1500
-USART1.BaudRate=921600
+USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USART2.BaudRate=921600
+USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-USART3.BaudRate=1152000
+USART3.BaudRate=115200
 USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
