--- a/Code/SuperCapCodeG4Bi/SuperCapCodeG4.ioc
+++ b/Code/SuperCapCodeG4Bi/SuperCapCodeG4.ioc
@@ -154,7 +154,25 @@ Dma.Request0=ADC2
 Dma.Request1=ADC1
 Dma.Request2=ADC3
 Dma.Request3=ADC4
-Dma.RequestsNb=4
+Dma.Request4=USART3_TX
+Dma.RequestsNb=5
+Dma.USART3_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.4.EventEnable=DISABLE
+Dma.USART3_TX.4.Instance=DMA1_Channel4
+Dma.USART3_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.4.Mode=DMA_CIRCULAR
+Dma.USART3_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART3_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.4.RequestNumber=1
+Dma.USART3_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART3_TX.4.SignalID=NONE
+Dma.USART3_TX.4.SyncEnable=DISABLE
+Dma.USART3_TX.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART3_TX.4.SyncRequestNumber=1
+Dma.USART3_TX.4.SyncSignalID=NONE
 FDCAN1.CalculateBaudRateNominal=1000000
 FDCAN1.CalculateTimeBitNominal=1000
 FDCAN1.CalculateTimeQuantumNominal=100.0
@@ -444,15 +462,15 @@ TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,PeriodNoDither,Prescaler,PulseNoDither_2,PulseNoDither_3
-TIM3.PeriodNoDither=48000-1
-TIM3.Prescaler=9-1
+TIM3.PeriodNoDither=48000
+TIM3.Prescaler=100-1
 TIM3.PulseNoDither_2=90
 TIM3.PulseNoDither_3=90
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,PeriodNoDither,Prescaler,PulseNoDither_1,PulseNoDither_2
 TIM4.PeriodNoDither=48000
-TIM4.Prescaler=10
+TIM4.Prescaler=10-1
 TIM4.PulseNoDither_1=90
 TIM4.PulseNoDither_2=90
 TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
