--- a/Code/SuperCapCodeG4Bi/SuperCapCodeG4.ioc
+++ b/Code/SuperCapCodeG4Bi/SuperCapCodeG4.ioc
@@ -79,8 +79,8 @@ ADC5.NbrOfConversionFlag=1
 ADC5.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC5.Rank-1\#ChannelRegularConversion=1
 ADC5.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_12CYCLES_5
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 Dma.ADC1.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.1.EventEnable=DISABLE
@@ -173,14 +173,15 @@ Dma.USART3_TX.4.SyncEnable=DISABLE
 Dma.USART3_TX.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.USART3_TX.4.SyncRequestNumber=1
 Dma.USART3_TX.4.SyncSignalID=NONE
-FDCAN1.CalculateBaudRateNominal=1000000
+FDCAN1.CalculateBaudRateNominal=999999
 FDCAN1.CalculateTimeBitNominal=1000
-FDCAN1.CalculateTimeQuantumNominal=100.0
+FDCAN1.CalculateTimeQuantumNominal=66.66666666666667
 FDCAN1.ClockDivider=FDCAN_CLOCK_DIV1
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,ClockDivider,NominalPrescaler,NominalTimeSeg2,NominalTimeSeg1
-FDCAN1.NominalPrescaler=15
-FDCAN1.NominalTimeSeg1=5
-FDCAN1.NominalTimeSeg2=4
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,ClockDivider,NominalPrescaler,NominalTimeSeg2,NominalTimeSeg1,NominalSyncJumpWidth
+FDCAN1.NominalPrescaler=10
+FDCAN1.NominalSyncJumpWidth=1
+FDCAN1.NominalTimeSeg1=7
+FDCAN1.NominalTimeSeg2=7
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -253,6 +254,7 @@ MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
