--- a/Code/SuperCapCodeG4Bi/SuperCapCodeG4.ioc
+++ b/Code/SuperCapCodeG4Bi/SuperCapCodeG4.ioc
@@ -194,9 +194,10 @@ Mcu.IP11=TIM2
 Mcu.IP12=TIM3
 Mcu.IP13=TIM4
 Mcu.IP14=TIM5
-Mcu.IP15=USART1
-Mcu.IP16=USART2
-Mcu.IP17=USART3
+Mcu.IP15=TIM6
+Mcu.IP16=USART1
+Mcu.IP17=USART2
+Mcu.IP18=USART3
 Mcu.IP2=ADC3
 Mcu.IP3=ADC4
 Mcu.IP4=ADC5
@@ -205,7 +206,7 @@ Mcu.IP6=FDCAN1
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SYS
-Mcu.IPNb=18
+Mcu.IPNb=19
 Mcu.Name=STM32G473V(B-C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -240,13 +241,14 @@ Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin35=VP_SYS_VS_DBSignals
 Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin37=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PF0-OSC_IN
 Mcu.Pin5=PF1-OSC_OUT
 Mcu.Pin6=PC0
 Mcu.Pin7=PA0
 Mcu.Pin8=PA1
 Mcu.Pin9=PA5
-Mcu.PinsNb=38
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G473VETx
@@ -265,6 +267,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
@@ -332,9 +335,8 @@ PE15.Signal=TIM1_CH4N
 PE2.GPIOParameters=GPIO_Label
 PE2.GPIO_Label=Buzzer
 PE2.Signal=S_TIM3_CH1
-PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=LED_0
-PE3.Signal=S_TIM3_CH2
+PE3.Locked=true
+PE3.Signal=GPIO_Output
 PE4.GPIOParameters=GPIO_Label
 PE4.GPIO_Label=LED_1
 PE4.Signal=S_TIM3_CH3
@@ -382,7 +384,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_ADC4_Init-ADC4-false-HAL-true,13-MX_FDCAN1_Init-FDCAN1-false-HAL-true,14-MX_ADC5_Init-ADC5-false-HAL-true,15-MX_ADC3_Init-ADC3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_ADC4_Init-ADC4-false-HAL-true,13-MX_FDCAN1_Init-FDCAN1-false-HAL-true,14-MX_ADC5_Init-ADC5-false-HAL-true,15-MX_ADC3_Init-ADC3-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM5_Init-TIM5-false-HAL-true,18-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.ADC12Freq_Value=150000000
 RCC.ADC345Freq_Value=150000000
 RCC.AHBFreq_Value=150000000
@@ -438,8 +440,6 @@ SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4 CH4N
 SH.S_TIM1_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
-SH.S_TIM3_CH2.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
@@ -461,12 +461,10 @@ TIM2.IPParameters=Prescaler,PeriodNoDither,AutoReloadPreload,Dithering
 TIM2.PeriodNoDither=500
 TIM2.Prescaler=0
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,PeriodNoDither,Prescaler,PulseNoDither_2,PulseNoDither_3
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,PeriodNoDither,Prescaler,PulseNoDither_3
 TIM3.PeriodNoDither=48000
 TIM3.Prescaler=100-1
-TIM3.PulseNoDither_2=90
 TIM3.PulseNoDither_3=90
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -478,6 +476,10 @@ TIM4.PulseNoDither_2=90
 TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM5.IPParameters=PeriodNoDither,AutoReloadPreload
 TIM5.PeriodNoDither=1500
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM6.IPParameters=Prescaler,PeriodNoDither,AutoReloadPreload
+TIM6.PeriodNoDither=1000-1
+TIM6.Prescaler=15000-1
 USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
@@ -495,4 +497,6 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
